feat: adding go docs to quiz controller and improvements
