# routes/setup.go
@@ -11,17 +11,12 @@ import (
 
 func SetupRoutes(r *gin.Engine) {
 	public := r.Group("/api")
-	private := r.Group("/api/private")
+	private := r.Group("/api")
 	private.Use(middleware.AuthMiddleware())
 
 	private.POST("/answer/save", controllers.SaveAnswers)
-	private.GET("/ping", func(ctx *gin.Context) {
-		ctx.JSON(200, gin.H{
-			"message": "pong",
-		})
-	})
+	private.GET("/questions", controllers.GetQuestions)
 
-	public.GET("/questions", controllers.GetQuestions)
 	public.POST("/register", controllers.Register)
 	public.POST("/login", controllers.Login)
 	public.GET("/health", Ping)
